made change to css to avoid overlapping of offerings

--- a/css/style.css
+++ b/css/style.css
@@ -765,6 +765,7 @@ a:focus {
     border-right: 1px solid rgba(0, 0, 0, .07);
     border-bottom: 1px solid rgba(0, 0, 0, .07);
     border-left: 1px solid rgba(0, 0, 0, .07);
+    border-top: 1px solid rgba(0, 0, 0, .07);
 }
 
 .class .class-text h2 {
